@@ -10,6 +10,7 @@
 """
 import pytest
 import os
+import random
 
 from werkzeug.contrib import cache
 
@@ -122,6 +123,29 @@ class CacheTests(object):
         assert c.set('bar', False)
         assert c.get('bar') in (False, 0)
 
+    def test_generic_no_timeout(self, c, fast_sleep):
+        # Timeouts of zero should cause the cache to never expire
+        c.set('foo', 'bar', 0)
+        fast_sleep(random.randint(1, 5))
+        assert c.get('foo') == 'bar'
+
+    def test_generic_timeout(self, c, fast_sleep):
+        # Check that cache expires when the timeout is reached
+        timeout = random.randint(1, 5)
+        c.set('foo', 'bar', timeout)
+        assert c.get('foo') == 'bar'
+        # sleep a bit longer than timeout to ensure there are no
+        # race conditions
+        fast_sleep(timeout + 1)
+        assert c.get('foo') is None
+
+
+class TestSimpleCache(CacheTests):
+
+    @pytest.fixture
+    def make_cache(self):
+        return cache.SimpleCache
+
     def test_purge(self):
         c = cache.SimpleCache(threshold=2)
         c.set('a', 'a')
@@ -130,13 +154,6 @@ class CacheTests(object):
         c.set('d', 'd')
         # Cache purges old items *before* it sets new ones.
         assert len(c._cache) == 3
-
-
-class TestSimpleCache(CacheTests):
-
-    @pytest.fixture
-    def make_cache(self):
-        return cache.SimpleCache
 
 
 class TestFileSystemCache(CacheTests):
